# py_edgar_api

./: .gitignore  README.md  pyproject.toml
py_edgar_api/: __init__.py  client.py  company.py
tests/: test_client.py
