[tool.poetry]
name = "py-edgar-api"
version = "0.1.2"
description = "Simple package to work with SEC EDGAR"
authors = ["grisha <grisha@grisha.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
