[tool.poetry]
name = "py-edgar-api"
version = "0.1.3"
description = "Simple package to work with SEC EDGAR"
authors = ["grisha <grisha@grisha.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
